--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sharp": "^0.26.0",
+    "tabletojson": "^2.0.4",
     "tesseract.js": "^2.1.1"
   }
 }
