working on the project setup python script

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 
 credentials
+
+# cloud functions temp folder files
 src/cloudFunctions/scrappeLastBankMovements/temp/*
 src/cloudFunctions/scrappeLastBankMovements/eng.traineddata
 
