--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.3.0",
     "next": "9.5.2",
     "puppeteer": "^5.2.1",
     "puppeteer-core": "^5.2.1",
