--- a/src/cloudFunctions/scrappeLastBankMovements/package.json
+++ b/src/cloudFunctions/scrappeLastBankMovements/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "bancolombia_dashboard",
+  "name": "last_account_movements_scrapper",
   "version": "0.0.1",
-  "private": true,
+  "description": "\"Last movements Bancolombia's account scrapper\"",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "test": "jest index.test.js --verbose"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
-    "all": "^0.0.0",
-    "next": "9.5.2",
     "puppeteer": "^5.2.1",
     "puppeteer-core": "^5.2.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
     "sharp": "^0.26.0",
     "tabletojson": "^2.0.4",
     "tesseract.js": "^2.1.1"
@@ -22,7 +17,6 @@
   "devDependencies": {
     "jest": "^26.4.2"
   },
-  "files": [
-    "src"
-  ]
+  "author": "Juan David Ramirez V",
+  "license": "ISC"
 }
